Chore: Finishing Fix and Upgrade unit testing transaction, openAPI, Fix Bug user delete,etc
