# openAPI.yml
@@ -448,7 +448,48 @@ paths:
           $ref: '#/components/responses/400'
         500:
           $ref: '#/components/responses/500'
-
+  /search:
+   get:
+      tags:
+        - search
+      summary: find product
+      description: searching product by name or price
+      parameters: 
+        - in: query
+          name: offset
+          schema:
+            type: string
+          description: the numbers of result user
+        - in: query
+          name: q
+          schema:
+            example: "pepsodent"
+            type: string
+          required: true
+          description: the keyword used to find product_name or price
+      responses:
+        200:
+          description: success found product
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  "data": [
+                    {
+                    "id": 1,
+                    "product_name": "Pepsodent",
+                    "product_image": "https://fauziawsbucket.s3.ap-southeast-1.amazonaws.com/3c8d7d6f76fcae16c934ac00b305bb25.jpg",
+                    "price": 4500,
+                    "stock": 9,
+                    "description": "gigi bersih alami dengan formula terbaru"
+                    }
+                    ]
+                  "message": "searching success"
+        400:
+          $ref: '#/components/responses/400'
+        500:
+          $ref: '#/components/responses/500'
   /carts:
     post:
       tags:
